@@ -55,14 +55,14 @@ import java.nio.file.FileSystemException;
 import java.nio.file.FileSystemLoopException;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.NotDirectoryException;
+import java.time.Instant;
+import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
 import java.util.EnumMap;
 import java.util.EnumSet;
-import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -70,6 +70,8 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.function.IntFunction;
+
+import static java.util.Map.entry;
 
 /**
  * A stream from another node to this node. Technically, it can also be streamed from a byte array but that is mostly for testing.
@@ -138,7 +140,7 @@ public abstract class StreamOutput extends OutputStream {
      */
     public void setFeatures(final Set<String> features) {
         assert this.features.isEmpty() : this.features;
-        this.features = Collections.unmodifiableSet(new HashSet<>(features));
+        this.features = Set.copyOf(features);
     }
 
     public long position() throws IOException {
@@ -319,6 +321,18 @@ public abstract class StreamOutput extends OutputStream {
         } else {
             writeBoolean(true);
             writeString(str);
+        }
+    }
+
+    /**
+     * Writes an optional {@link Integer}.
+     */
+    public void writeOptionalInt(@Nullable Integer integer) throws IOException {
+        if (integer == null) {
+            writeBoolean(false);
+        } else {
+            writeBoolean(true);
+            writeInt(integer);
         }
     }
 
@@ -560,138 +574,199 @@ public abstract class StreamOutput extends OutputStream {
         }
     }
 
-    private static final Map<Class<?>, Writer> WRITERS;
-
-    static {
-        Map<Class<?>, Writer> writers = new HashMap<>();
-        writers.put(String.class, (o, v) -> {
-            o.writeByte((byte) 0);
-            o.writeString((String) v);
-        });
-        writers.put(Integer.class, (o, v) -> {
-            o.writeByte((byte) 1);
-            o.writeInt((Integer) v);
-        });
-        writers.put(Long.class, (o, v) -> {
-            o.writeByte((byte) 2);
-            o.writeLong((Long) v);
-        });
-        writers.put(Float.class, (o, v) -> {
-            o.writeByte((byte) 3);
-            o.writeFloat((float) v);
-        });
-        writers.put(Double.class, (o, v) -> {
-            o.writeByte((byte) 4);
-            o.writeDouble((double) v);
-        });
-        writers.put(Boolean.class, (o, v) -> {
-            o.writeByte((byte) 5);
-            o.writeBoolean((boolean) v);
-        });
-        writers.put(byte[].class, (o, v) -> {
-            o.writeByte((byte) 6);
-            final byte[] bytes = (byte[]) v;
-            o.writeVInt(bytes.length);
-            o.writeBytes(bytes);
-        });
-        writers.put(List.class, (o, v) -> {
-            o.writeByte((byte) 7);
-            final List list = (List) v;
-            o.writeVInt(list.size());
-            for (Object item : list) {
-                o.writeGenericValue(item);
-            }
-        });
-        writers.put(Object[].class, (o, v) -> {
-            o.writeByte((byte) 8);
-            final Object[] list = (Object[]) v;
-            o.writeVInt(list.length);
-            for (Object item : list) {
-                o.writeGenericValue(item);
-            }
-        });
-        writers.put(Map.class, (o, v) -> {
-            if (v instanceof LinkedHashMap) {
-                o.writeByte((byte) 9);
-            } else {
-                o.writeByte((byte) 10);
-            }
-            @SuppressWarnings("unchecked")
-            final Map<String, Object> map = (Map<String, Object>) v;
-            o.writeVInt(map.size());
-            for (Map.Entry<String, Object> entry : map.entrySet()) {
-                o.writeString(entry.getKey());
-                o.writeGenericValue(entry.getValue());
-            }
-        });
-        writers.put(Byte.class, (o, v) -> {
-            o.writeByte((byte) 11);
-            o.writeByte((Byte) v);
-        });
-        writers.put(Date.class, (o, v) -> {
-            o.writeByte((byte) 12);
-            o.writeLong(((Date) v).getTime());
-        });
-        writers.put(ReadableInstant.class, (o, v) -> {
-            o.writeByte((byte) 13);
-            final ReadableInstant instant = (ReadableInstant) v;
-            o.writeString(instant.getZone().getID());
-            o.writeLong(instant.getMillis());
-        });
-        writers.put(BytesReference.class, (o, v) -> {
-            o.writeByte((byte) 14);
-            o.writeBytesReference((BytesReference) v);
-        });
-        writers.put(Text.class, (o, v) -> {
-            o.writeByte((byte) 15);
-            o.writeText((Text) v);
-        });
-        writers.put(Short.class, (o, v) -> {
-            o.writeByte((byte) 16);
-            o.writeShort((Short) v);
-        });
-        writers.put(int[].class, (o, v) -> {
-            o.writeByte((byte) 17);
-            o.writeIntArray((int[]) v);
-        });
-        writers.put(long[].class, (o, v) -> {
-            o.writeByte((byte) 18);
-            o.writeLongArray((long[]) v);
-        });
-        writers.put(float[].class, (o, v) -> {
-            o.writeByte((byte) 19);
-            o.writeFloatArray((float[]) v);
-        });
-        writers.put(double[].class, (o, v) -> {
-            o.writeByte((byte) 20);
-            o.writeDoubleArray((double[]) v);
-        });
-        writers.put(BytesRef.class, (o, v) -> {
-            o.writeByte((byte) 21);
-            o.writeBytesRef((BytesRef) v);
-        });
-        writers.put(GeoPoint.class, (o, v) -> {
-            o.writeByte((byte) 22);
-            o.writeGeoPoint((GeoPoint) v);
-        });
-        writers.put(ZonedDateTime.class, (o, v) -> {
-            o.writeByte((byte) 23);
-            final ZonedDateTime zonedDateTime = (ZonedDateTime) v;
-            zonedDateTime.getZone().getId();
-            o.writeString(zonedDateTime.getZone().getId());
-            o.writeLong(zonedDateTime.toInstant().toEpochMilli());
-        });
-        writers.put(JodaCompatibleZonedDateTime.class, (o, v) -> {
-            // write the joda compatibility datetime as joda datetime
-            o.writeByte((byte) 13);
-            final JodaCompatibleZonedDateTime zonedDateTime = (JodaCompatibleZonedDateTime) v;
-            String zoneId = zonedDateTime.getZonedDateTime().getZone().getId();
-            // joda does not understand "Z" for utc, so we must special case
-            o.writeString(zoneId.equals("Z") ? DateTimeZone.UTC.getID() : zoneId);
-            o.writeLong(zonedDateTime.toInstant().toEpochMilli());
-        });
-        WRITERS = Collections.unmodifiableMap(writers);
+    /**
+     * Writes an {@link Instant} to the stream with nanosecond resolution
+     */
+    public final void writeInstant(Instant instant) throws IOException {
+        writeLong(instant.getEpochSecond());
+        writeInt(instant.getNano());
     }
+
+    /**
+     * Writes an {@link Instant} to the stream, which could possibly be null
+     */
+    public final void writeOptionalInstant(@Nullable Instant instant) throws IOException {
+        if (instant == null) {
+            writeBoolean(false);
+        } else {
+            writeBoolean(true);
+            writeInstant(instant);
+        }
+    }
+
+    private static final Map<Class<?>, Writer> WRITERS = Map.ofEntries(
+            entry(
+                    String.class,
+                    (o, v) -> {
+                        o.writeByte((byte) 0);
+                        o.writeString((String) v);
+                    }),
+            entry(
+                    Integer.class,
+                    (o, v) -> {
+                        o.writeByte((byte) 1);
+                        o.writeInt((Integer) v);
+                    }),
+            entry(
+                    Long.class,
+                    (o, v) -> {
+                        o.writeByte((byte) 2);
+                        o.writeLong((Long) v);
+                    }),
+            entry(
+                    Float.class,
+                    (o, v) -> {
+                        o.writeByte((byte) 3);
+                        o.writeFloat((float) v);
+                    }),
+            entry(
+                    Double.class,
+                    (o, v) -> {
+                        o.writeByte((byte) 4);
+                        o.writeDouble((double) v);
+                    }),
+            entry(
+                    Boolean.class,
+                    (o, v) -> {
+                        o.writeByte((byte) 5);
+                        o.writeBoolean((boolean) v);
+                    }),
+            entry(
+                    byte[].class,
+                    (o, v) -> {
+                        o.writeByte((byte) 6);
+                        final byte[] bytes = (byte[]) v;
+                        o.writeVInt(bytes.length);
+                        o.writeBytes(bytes);
+                    }),
+            entry(
+                    List.class,
+                    (o, v) -> {
+                        o.writeByte((byte) 7);
+                        final List list = (List) v;
+                        o.writeVInt(list.size());
+                        for (Object item : list) {
+                            o.writeGenericValue(item);
+                        }
+                    }),
+            entry(
+                    Object[].class,
+                    (o, v) -> {
+                        o.writeByte((byte) 8);
+                        final Object[] list = (Object[]) v;
+                        o.writeVInt(list.length);
+                        for (Object item : list) {
+                            o.writeGenericValue(item);
+                        }
+                    }),
+            entry(
+                    Map.class,
+                    (o, v) -> {
+                        if (v instanceof LinkedHashMap) {
+                            o.writeByte((byte) 9);
+                        } else {
+                            o.writeByte((byte) 10);
+                        }
+                        @SuppressWarnings("unchecked") final Map<String, Object> map = (Map<String, Object>) v;
+                        o.writeVInt(map.size());
+                        for (Map.Entry<String, Object> entry : map.entrySet()) {
+                            o.writeString(entry.getKey());
+                            o.writeGenericValue(entry.getValue());
+                        }
+                    }),
+            entry(
+                    Byte.class,
+                    (o, v) -> {
+                        o.writeByte((byte) 11);
+                        o.writeByte((Byte) v);
+                    }),
+            entry(
+                    Date.class,
+                    (o, v) -> {
+                        o.writeByte((byte) 12);
+                        o.writeLong(((Date) v).getTime());
+                    }),
+            entry(
+                    ReadableInstant.class,
+                    (o, v) -> {
+                        o.writeByte((byte) 13);
+                        final ReadableInstant instant = (ReadableInstant) v;
+                        o.writeString(instant.getZone().getID());
+                        o.writeLong(instant.getMillis());
+                    }),
+            entry(
+                    BytesReference.class,
+                    (o, v) -> {
+                        o.writeByte((byte) 14);
+                        o.writeBytesReference((BytesReference) v);
+                    }),
+            entry(
+                    Text.class,
+                    (o, v) -> {
+                        o.writeByte((byte) 15);
+                        o.writeText((Text) v);
+                    }),
+            entry(
+                    Short.class,
+                    (o, v) -> {
+                        o.writeByte((byte) 16);
+                        o.writeShort((Short) v);
+                    }),
+            entry(
+                    int[].class,
+                    (o, v) -> {
+                        o.writeByte((byte) 17);
+                        o.writeIntArray((int[]) v);
+                    }),
+            entry(
+                    long[].class,
+                    (o, v) -> {
+                        o.writeByte((byte) 18);
+                        o.writeLongArray((long[]) v);
+                    }),
+            entry(
+                    float[].class,
+                    (o, v) -> {
+                        o.writeByte((byte) 19);
+                        o.writeFloatArray((float[]) v);
+                    }),
+            entry(
+                    double[].class,
+                    (o, v) -> {
+                        o.writeByte((byte) 20);
+                        o.writeDoubleArray((double[]) v);
+                    }),
+            entry(
+                    BytesRef.class,
+                    (o, v) -> {
+                        o.writeByte((byte) 21);
+                        o.writeBytesRef((BytesRef) v);
+                    }),
+            entry(
+                    GeoPoint.class,
+                    (o, v) -> {
+                        o.writeByte((byte) 22);
+                        o.writeGeoPoint((GeoPoint) v);
+                    }),
+            entry(
+                    ZonedDateTime.class,
+                    (o, v) -> {
+                        o.writeByte((byte) 23);
+                        final ZonedDateTime zonedDateTime = (ZonedDateTime) v;
+                        o.writeString(zonedDateTime.getZone().getId());
+                        o.writeLong(zonedDateTime.toInstant().toEpochMilli());
+                    }),
+            entry(
+                    JodaCompatibleZonedDateTime.class,
+                    (o, v) -> {
+                        // write the joda compatibility datetime as joda datetime
+                        o.writeByte((byte) 13);
+                        final JodaCompatibleZonedDateTime zonedDateTime = (JodaCompatibleZonedDateTime) v;
+                        String zoneId = zonedDateTime.getZonedDateTime().getZone().getId();
+                        // joda does not understand "Z" for utc, so we must special case
+                        o.writeString(zoneId.equals("Z") ? DateTimeZone.UTC.getID() : zoneId);
+                        o.writeLong(zonedDateTime.toInstant().toEpochMilli());
+                    }));
 
     /**
      * Notice: when serialization a map, the stream out map with the stream in map maybe have the
@@ -989,6 +1064,13 @@ public abstract class StreamOutput extends OutputStream {
     }
 
     /**
+     * Write a {@linkplain ZoneId} to the stream.
+     */
+    public void writeZoneId(ZoneId timeZone) throws IOException {
+        writeString(timeZone.getId());
+    }
+
+    /**
      * Write an optional {@linkplain DateTimeZone} to the stream.
      */
     public void writeOptionalTimeZone(@Nullable DateTimeZone timeZone) throws IOException {
@@ -997,6 +1079,18 @@ public abstract class StreamOutput extends OutputStream {
         } else {
             writeBoolean(true);
             writeTimeZone(timeZone);
+        }
+    }
+
+    /**
+     * Write an optional {@linkplain ZoneId} to the stream.
+     */
+    public void writeOptionalZoneId(@Nullable ZoneId timeZone) throws IOException {
+        if (timeZone == null) {
+            writeBoolean(false);
+        } else {
+            writeBoolean(true);
+            writeZoneId(timeZone);
         }
     }
 
@@ -1011,33 +1105,45 @@ public abstract class StreamOutput extends OutputStream {
     }
 
     /**
-     * Writes a list of {@link Writeable} objects
+     * Writes a collection to this stream. The corresponding collection can be read from a stream input using
+     * {@link StreamInput#readList(Writeable.Reader)}.
+     *
+     * @param collection the collection to write to this stream
+     * @throws IOException if an I/O exception occurs writing the collection
      */
-    public void writeList(List<? extends Writeable> list) throws IOException {
-        writeVInt(list.size());
-        for (Writeable obj: list) {
-            obj.writeTo(this);
-        }
+    public void writeCollection(final Collection<? extends Writeable> collection) throws IOException {
+        writeCollection(collection, (o, v) -> v.writeTo(o));
     }
 
     /**
-     * Writes a collection of generic objects via a {@link Writer}
+     * Writes a list of {@link Writeable} objects
      */
-    public <T> void writeCollection(Collection<T> collection, Writer<T> writer) throws IOException {
+    public void writeList(List<? extends Writeable> list) throws IOException {
+        writeCollection(list);
+    }
+
+    /**
+     * Writes a collection of objects via a {@link Writer}.
+     *
+     * @param collection the collection of objects
+     * @throws IOException if an I/O exception occurs writing the collection
+     */
+    public <T> void writeCollection(final Collection<T> collection, final Writer<T> writer) throws IOException {
         writeVInt(collection.size());
-        for (T val: collection) {
+        for (final T val: collection) {
             writer.write(this, val);
         }
     }
 
     /**
-     * Writes a list of strings
+     * Writes a collection of a strings. The corresponding collection can be read from a stream input using
+     * {@link StreamInput#readList(Writeable.Reader)}.
+     *
+     * @param collection the collection of strings
+     * @throws IOException if an I/O exception occurs writing the collection
      */
-    public void writeStringList(List<String> list) throws IOException {
-        writeVInt(list.size());
-        for (String string: list) {
-            this.writeString(string);
-        }
+    public void writeStringCollection(final Collection<String> collection) throws IOException {
+        writeCollection(collection, StreamOutput::writeString);
     }
 
     /**
@@ -1051,7 +1157,7 @@ public abstract class StreamOutput extends OutputStream {
     }
 
     /**
-     * Writes an enum with type E that by serialized it based on it's ordinal value
+     * Writes an enum with type E based on its ordinal value
      */
     public <E extends Enum<E>> void writeEnum(E enumValue) throws IOException {
         writeVInt(enumValue.ordinal());
