@@ -77,17 +77,15 @@ public class Monitoring extends Plugin implements ActionPlugin {
     /**
      * The ability to automatically cleanup ".watcher_history*" indices while also cleaning up Monitoring indices.
      */
+    @Deprecated
     public static final Setting<Boolean> CLEAN_WATCHER_HISTORY = boolSetting("xpack.watcher.history.cleaner_service.enabled",
-                                                                             true,
-                                                                             Setting.Property.Dynamic, Setting.Property.NodeScope);
+        true, Setting.Property.Dynamic, Setting.Property.NodeScope, Setting.Property.Deprecated);
 
     protected final Settings settings;
     private final boolean enabled;
-    private final boolean transportClientMode;
 
     public Monitoring(Settings settings) {
         this.settings = settings;
-        this.transportClientMode = XPackPlugin.transportClientMode(settings);
         this.enabled = XPackSettings.MONITORING_ENABLED.get(settings);
     }
 
@@ -100,16 +98,12 @@ public class Monitoring extends Plugin implements ActionPlugin {
         return enabled;
     }
 
-    boolean isTransportClient() {
-        return transportClientMode;
-    }
-
     @Override
     public Collection<Module> createGuiceModules() {
         List<Module> modules = new ArrayList<>();
         modules.add(b -> {
             XPackPlugin.bindFeatureSet(b, MonitoringFeatureSet.class);
-            if (transportClientMode || enabled == false) {
+            if (enabled == false) {
                 b.bind(MonitoringService.class).toProvider(Providers.of(null));
                 b.bind(Exporters.class).toProvider(Providers.of(null));
             }
@@ -191,6 +185,6 @@ public class Monitoring extends Plugin implements ActionPlugin {
     @Override
     public List<String> getSettingsFilter() {
         final String exportersKey = "xpack.monitoring.exporters.";
-        return Collections.unmodifiableList(Arrays.asList(exportersKey + "*.auth.*", exportersKey + "*.ssl.*"));
+        return List.of(exportersKey + "*.auth.*", exportersKey + "*.ssl.*");
     }
 }
